# aitexttosqlengine

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  texttosql.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: aitexttosql-AutoDeployTrigger-310540f4-e231-4523-9ac2-e5490a6b66a7.yml  python-app.yml
src/aitexttosqlengine/: __init__.py  app.py  cli.py  db.py  engine.py
src/aitexttosqlengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_db.py  test_engine.py
