[project]
name = "aitexttosqlengine"
version = "0.1.0"
description = "Text-to-SQL engine prototype built from a LangChain notebook workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-core>=0.1.0",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aitexttosqlengine = "aitexttosqlengine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aitexttosqlengine*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
